# soku

./: .gitignore  .npmignore  .npmrc.github  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NPM_OR_GITHUB_PACKAGES.md  NPM_PUBLISHING.md  NPM_README.md  PERFORMANCE.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  ROADMAP.md  UNIFIED_PROCESSOR.md  package.github.json  package.json
.github/workflows/: ci.yml  release.yml
.ultra-cache/: incremental_state.json
.ultra-cache/ultra_cache.sled/: db  snap.0000000000000316  snap.0000000000003C4E  snap.0000000000003CAB  snap.0000000000004656  snap.0000000000008AFC  snap.0000000000008E56  snap.000000000000B86F  snap.000000000000D43C  snap.0000000000014C85  snap.0000000000016A8E  snap.0000000000017DFE  snap.00000000000197B3  snap.000000000002253F
.ultra-cache/ultra_cache.sled/blobs/: 12931  12947  335  5845  5861
demo-project/: README.md  advanced-typescript.ts  index.html.bak  main.js  package-lock.json.bak  package.json  simple-main.js  simple-only.ts  simple-test.js  test-interface.ts  test-lodash-specific.js  test-lodash.js.bak  test-main.js  test-node-modules.js  test-node-modules.js.bak  test-npm.js  test-npm.js.bak
demo-project-broken/: main.js  package.json  simple-main.js
demo-project-broken/.ultra-cache/ultra_cache.sled/: db  snap.000000000000020F
demo-project-broken/src/: app.js  app.js.bak  simple.js  utils.js
demo-project-working/: utils.js
demo-project-working/.ultra-cache/ultra_cache.sled/: db  snap.00000000000012C1  snap.0000000000002BEC  snap.000000000000327C
demo-project/.ultra-cache/ultra_cache.sled/: db  snap.00000000000001AF
demo-project/node_modules.bak/: .package-lock.json
demo-project/src/: app.js  components.tsx  components.tsx.bak  main.js  styles.css  types.ts.bak  utils.js  utils.js.bak
demo-project/temp-backup/: main.js
demo-project/temp-backup.disabled/: test-npm.js
docs/: DEVELOPMENT.md  PLUGIN_API.md  QUICK_START.md
examples/: 01_basic_plugin.rs  02_custom_transformers.rs  03_hmr_hooks.rs  04_advanced_integration.rs  README.md
examples/basic/: advanced-styles.css  counter.js  esbuild.config.js  index.html  main-rspack.js  main-tree-shaking.js  main.css  main.js  package-lock.json  package.json  rspack.config.cjs  styles.css  styles.module.css  test-oxc.js  ultra.config.json  utils.js  vite.config.js
examples/basic/perf-test/: bundle.css  bundle.js
examples/basic/src/: advanced-counter.tsx  types.ts
examples/basic/utils/: logger.js
scripts/: create-release.sh  generate-changelog.sh  prepare-npm-packages.sh  publish-npm.sh
src/: bundler.rs  cache.rs  config.rs  css.rs  css_simple.rs  graph.rs  lib.rs  main.rs  main_full.rs  main_old.rs  memory.rs  plugins.rs  profiling.rs  resolver.rs  server.rs  streaming.rs  transform.rs  transform_simple.rs  tree_shaking.rs
src/cli/: commands.rs  mod.rs
src/core/: interfaces.rs  mod.rs  models.rs  plugin.rs  services.rs
src/infrastructure/: file_system.rs  hmr.rs  hmr_client.rs  hmr_hooks.rs  mod.rs  node_resolver.rs  soku_file_system.rs  ultra_file_system.rs
src/infrastructure/processors/: asset_processor.rs  ast_tree_shaker.rs  code_splitter.rs  common.rs  css_processor.rs  dynamic_import_splitter.rs  enhanced_js_processor.rs  js_processor.rs  minifier.rs  mod.rs  scss_processor.rs  swc_processor.rs  tree_shaker.rs
src/plugins/: banner_plugin.rs  mod.rs  stats_plugin.rs
src/utils/: advanced_performance.rs  advanced_source_maps.rs  bundle_analysis.rs  config_loader.rs  css_modules.rs  custom_transformers.rs  dead_code_eliminator.rs  env_vars.rs  errors.rs  incremental.rs  logging.rs  mod.rs  path_aliases.rs  performance.rs  plugin_system.rs  profiler.rs  soku_ui.rs  ultra_ui.rs  wasm_support.rs  watch.rs
test-array-destructuring/: main.js  test.tsx
test-clean/: main.js
test-clean/.ultra-cache/ultra_cache.sled/: db  snap.00000000000011B8
test-complex-combo/: main.js  test.tsx
test-css-modules/: main.js
test-css-modules/.ultra-cache/: incremental_state.json
test-css-modules/.ultra-cache/ultra_cache.sled/: db
test-error/: main.js
test-hmr/: index.html
test-hmr/src/: main.js  styles.css
test-hmr/test-hmr/src/: main.js  styles.css
test-large/: main.js
test-large/.ultra-cache/: incremental_state.json
test-large/.ultra-cache/ultra_cache.sled/: db  snap.0000000000001A7F  snap.000000000000BBC7
test-large/src/: components.js  config.js  helpers.js  services.js  styles.css  types.ts  utils.js
test-minimal-optional/: main.js  test.tsx
test-minimal-optional/.ultra-cache/ultra_cache.sled/: db  snap.0000000000000561
test-node-modules-clean/: main-commonjs.js  main-simple.js  main.js
test-node-modules-fresh/: main.js
test-simple/: main.js
test-tree-shaking/: simple.js
test-typescript/: main.ts
test-typescript-debug/: first-half.tsx  main.js  step1-simple.tsx  step2-destructuring.tsx  step3-defaults.tsx  step4-generics.tsx  step5-intersection.tsx  step6-tuples.tsx  step7-optional-call.tsx  test-only-optional.tsx
tests/integration/: build_tests.rs  css_modules_tests.rs  mod.rs  tree_shaking_tests.rs
(+27 files in other folders)
