[package]
name = "ultra"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# JS/TS parsing with oxc
oxc_parser = "0.39"
oxc_ast = "0.39"
oxc_span = "0.39"
oxc_allocator = "0.39"

# CSS processing with lightningcss
lightningcss = "1.0.0-alpha.67"

# Regex for parsing
regex = "1.10"

# Async traits
async-trait = "0.1"

# Ultra impressive visuals
indicatif = "0.17"
console = "0.15"
colored = "2.0"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.8"