[package]
name = "ultra"
version = "0.3.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# JS/TS parsing with oxc - Latest available version
oxc_parser = "0.90.0"
oxc_ast = "0.90.0"
oxc_span = "0.90.0"
oxc_allocator = "0.90.0"
oxc_minifier = "0.90.0"
oxc_codegen = "0.90.0"
oxc_transformer = "0.90.0"
oxc_semantic = "0.90.0"
oxc_diagnostics = "0.90.0"

# CSS processing with lightningcss - Keep alpha version
lightningcss = "1.0.0-alpha.67"

# Regex for parsing - Updated
regex = "1.11"

# Async traits
async-trait = "0.1"

# Ultra impressive visuals
indicatif = "0.17"
console = "0.15"
colored = "2.0"
crossterm = "0.27"

# Performance optimizations
rayon = "1.10"
dashmap = "6.0"
num_cpus = "1.16"
futures = "0.3"

# TypeScript processing with enhanced oxc (fallback from SWC due to version conflicts)
# Will implement SWC in future when version issues are resolved

# Persistent cache
sled = "0.34"

# Advanced async I/O and file watching
notify = "6.0"

# Memory optimization
string-interner = "0.17"
bumpalo = "3.0"
parking_lot = "0.12"

# Advanced performance optimizations
memmap2 = "0.9"
blake3 = "1.5"

# SIMD and vectorization
wide = "0.7"

# Serialization for persistent cache
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Source maps support
sourcemap = "8.0"

# Compression for advanced bundle optimization
flate2 = "1.0"

# Hot Module Replacement (HMR)
tokio-tungstenite = "0.21"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"