[package]
name = "soku"
version = "0.3.0"
edition = "2021"

[profile.release]
# Enable Link Time Optimization for smaller binary and better performance
lto = "fat"
# Use single codegen unit for maximum optimization
codegen-units = 1
# Strip symbols for smaller binary
strip = true
# Optimize for size while maintaining performance
opt-level = "z"
# Enable panic abort for smaller binary
panic = "abort"

[profile.dev]
# Fast incremental compilation for development
opt-level = 0
incremental = true

[profile.test]
# Optimize tests for speed
opt-level = 2
incremental = true

[dependencies]
# Core async runtime - optimized features (reduced from "full")
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "signal", "net"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# JS/TS parsing with oxc - Latest available version
oxc_parser = "0.90.0"
oxc_ast = "0.90.0"
oxc_span = "0.90.0"
oxc_allocator = "0.90.0"
oxc_minifier = "0.90.0"
oxc_codegen = "0.90.0"
oxc_transformer = "0.90.0"
oxc_semantic = "0.90.0"
oxc_diagnostics = "0.90.0"

# CSS processing with lightningcss - Keep alpha version
lightningcss = "1.0.0-alpha.67"

# SCSS/SASS preprocessing
grass = "0.13"

# Regex for parsing - Updated
regex = "1.11"

# Lazy evaluation for regex compilation
once_cell = "1.19"

# Async traits
async-trait = "0.1"

# Soku impressive visuals
colored = "2.0"

# Performance optimizations
rayon = "1.10"
dashmap = "6.0"
num_cpus = "1.16"
futures = "0.3"

# TypeScript processing with enhanced oxc (fallback from SWC due to version conflicts)
# Will implement SWC in future when version issues are resolved

# Persistent cache
sled = "0.34"

# Advanced async I/O and file watching
notify = "6.0"

# Memory optimization
string-interner = "0.17"
bumpalo = "3.0"
parking_lot = "0.12"

# Advanced performance optimizations
memmap2 = "0.9"
blake3 = "1.5"

# Serialization for persistent cache
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bincode = "1.3"

# Source maps support
sourcemap = "8.0"

# Compression for advanced bundle optimization
flate2 = "1.0"

# Hot Module Replacement (HMR)
tokio-tungstenite = "0.21"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
chrono = "0.4"  # Date/time for examples
